unpackaged/main/default/objects/SLCA2__CA_Sites__c/SLCA2__CA_Sites__c.object-meta.xml
<CustomObject>
    <description>Connect Sites and Calendars</description>
    <label>CA_Sites</label>
    <nameField>
        <label>CA Sites Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>