unpackaged/main/default/objects/SLCA2__CA_Sites__c/fields/SLCA2__CA_Calendar__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__CA_Calendar__c</fullName>
    <label>CA_Calendar</label>
    <referenceTo>SLCA2__CA_Calendar__c</referenceTo>
    <relationshipLabel>CA_Sites</relationshipLabel>
    <relationshipName>CA_Sites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>