unpackaged/main/default/objects/SLCA2__CA_Sites__c/fields/SLCA2__order__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__order__c</fullName>
    <label>order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>