unpackaged/main/default/objects/SLCA2__CA_Sites__c/fields/SLCA2__siteId__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__siteId__c</fullName>
    <label>siteId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>